[gd_scene load_steps=4 format=3 uid="uid://b5refm32wcct"]

[ext_resource type="Script" path="res://scenes/test_room.gd" id="1_b10c0"]
[ext_resource type="PackedScene" uid="uid://c1aoqyjflvy6h" path="res://scenes/mob_mouse.tscn" id="2_qvb8j"]

[sub_resource type="Curve2D" id="Curve2D_c47cg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 413, 95, 0, 0, 0, 0, 439, 177, 0, 0, 0, 0, 420, 235, 0, 0, 0, 0, 413, 95)
}
point_count = 4

[node name="testRoom" type="Node"]
script = ExtResource("1_b10c0")
mob_mouse_scene = ExtResource("2_qvb8j")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 240)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="MousePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_c47cg")

[node name="MouseSpawnLocation" type="PathFollow2D" parent="MousePath"]
position = Vector2(413, 95)
rotation = 1.26375

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
